# PEtabToSEDML

./: .gitignore  PEtab to SEDML testing space.ipynb  README.md
env/: environment.yml  pyproject.toml
source/: arguements.py  builders.py  loader.py
test_benchmark/: conditions.tsv  measurements.tsv  observables.tsv  parameters.tsv  sedml_file.xml  test_benchmark.yml  visualizations.tsv
